@@ -1,0 +1,11 @@
+//	Pretty URLs live news
+
+var chrome = chrome || {};
+
+chrome.news = [
+	{date: 'Never', text: 'A placeholder news item'}	
+];
+
+chrome.latestVersion = '0.8.3';
+chrome.upgradeFrom = '';
+chrome.upgradeUrl = '';
